fix for logo problem on mobile devices

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -3,7 +3,7 @@
 		  background:rgba(143,207,251,0.5) !important;
 		}.Logo{
 	content:url(White-Logo-Xyuto.png);
-	height:17.5%;
+	height:12.5%;
 }
 
 		.onepage-pagination li a.active:before{
